--- a/index.html
+++ b/index.html
@@ -1,132 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Income Tax Calculator</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f8f8f8;
-    }
-    h1 {
-      text-align: center;
-    }
-    form {
-      background: #fff;
-      padding: 20px;
-      max-width: 600px;
-      margin: auto;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input, select {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px;
-      width: 100%;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    #result {
-      margin-top: 20px;
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 20px;
-      background: #e6ffe6;
-      border: 1px solid #00cc66;
-      border-radius: 8px;
-      display: none;
-    }
-    .regime-result {
-      padding: 10px;
-      background: #f1f1f1;
-      margin-top: 10px;
-      border-radius: 5px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Income Tax Calculator</title>
 </head>
 <body>
+    <h1>Income Tax Calculator</h1>
 
-  <h1>Income Tax Calculator</h1>
+    <!-- Input Form -->
+    <form id="taxForm">
+        <label for="income">Enter Income: ₹</label>
+        <input type="number" id="income" name="income" required>
+        <button type="button" onclick="calculateTax()">Calculate Tax</button>
+    </form>
 
-  <form id="taxForm">
-    <label for="salary">Annual Salary (₹):</label>
-    <input type="number" id="salary" required>
+    <!-- Result Display -->
+    <h2>Tax Summary</h2>
+    <p id="result"></p>
 
-    <label for="otherIncome">Other Income (₹):</label>
-    <input type="number" id="otherIncome">
-
-    <label for="deductions">Deductions (₹):</label>
-    <input type="number" id="deductions">
-
-    <button type="submit">Calculate Tax</button>
-  </form>
-
-  <div id="result">
-    <h2>Tax Calculation Summary</h2>
-    <div class="regime-result" id="oldTaxResult"></div>
-    <div class="regime-result" id="newTaxResult"></div>
-  </div>
-
-  <script>
-    document.getElementById('taxForm').addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      let salary = parseFloat(document.getElementById('salary').value) || 0;
-      let otherIncome = parseFloat(document.getElementById('otherIncome').value) || 0;
-      let deductions = parseFloat(document.getElementById('deductions').value) || 0;
-
-      let totalIncome = salary + otherIncome;
-      let taxableOld = totalIncome - deductions;
-      let taxableNew = totalIncome; // No deductions allowed in new regime
-
-      // Old Regime
-      let oldTax = 0;
-      if (taxableOld <= 250000) {
-        oldTax = 0;
-      } else if (taxableOld <= 500000) {
-        oldTax = (taxableOld - 250000) * 0.05;
-      } else if (taxableOld <= 1000000) {
-        oldTax = (250000 * 0.05) + (taxableOld - 500000) * 0.1;
-      } else {
-        oldTax = (250000 * 0.05) + (500000 * 0.1) + (taxableOld - 1000000) * 0.3;
-      }
-
-      // New Regime
-      let newTax = 0;
-      if (taxableNew <= 250000) {
-        newTax = 0;
-      } else if (taxableNew <= 500000) {
-        newTax = (taxableNew - 250000) * 0.05;
-      } else if (taxableNew <= 750000) {
-        newTax = (250000 * 0.05) + (taxableNew - 500000) * 0.1;
-      } else if (taxableNew <= 1000000) {
-        newTax = (250000 * 0.05) + (250000 * 0.1) + (taxableNew - 750000) * 0.15;
-      } else if (taxableNew <= 1250000) {
-        newTax = (250000 * 0.05) + (250000 * 0.1) + (250000 * 0.15) + (taxableNew - 1000000) * 0.2;
-      } else if (taxableNew <= 1500000) {
-        newTax = (250000 * 0.05) + (250000 * 0.1) + (250000 * 0.15) + (250000 * 0.2) + (taxableNew - 1250000) * 0.25;
-      } else {
-        newTax = (250000 * 0.05) + (250000 * 0.1) + (250000 * 0.15) + (250000 * 0.2) + (250000 * 0.25) + (taxableNew - 1500000) * 0.3;
-      }
-
-      document.getElementById('oldTaxResult').innerText = `Old Regime Tax: ₹${oldTax.toFixed(2)}`;
-      document.getElementById('newTaxResult').innerText = `New Regime Tax: ₹${newTax.toFixed(2)}`;
-      document.getElementById('result').style.display = 'block';
-    });
-  </script>
-
+    <script src="script.js"></script>
 </body>
 </html>
