--- a/index.html
+++ b/index.html
@@ -1,140 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Income Tax Calculator</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .container { width: 50%; margin: 0 auto; }
-        label { display: block; margin: 10px 0 5px; }
-        input, select { width: 100%; padding: 8px; margin: 5px 0 20px; }
-        button { padding: 10px 20px; background-color: #4CAF50; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #45a049; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amaccountable | Income Tax Calculator</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #1a237e;
+      color: white;
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    .container {
+      max-width: 800px;
+      margin: 2rem auto;
+      background: white;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      color: #1a237e;
+      margin-bottom: 1rem;
+    }
+
+    .form-group {
+      margin-bottom: 1rem;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 0.3rem;
+      font-weight: 500;
+    }
+
+    input, select {
+      width: 100%;
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+
+    .hidden {
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
+<header>
+  Amaccountable – Income Tax Calculator
+</header>
+
 <div class="container">
-    <h1>Income Tax Calculator</h1>
+  <h2>Section 1: Personal Information</h2>
 
-    <!-- Section 1: Personal Details -->
-    <div id="section1">
-        <h2>Personal Details</h2>
-        <form id="taxForm">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-            
-            <label for="age">Age:</label>
-            <input type="number" id="age" name="age" required>
+  <div class="form-group">
+    <label>Name <span style="color:red;">*</span></label>
+    <input type="text" id="name" required />
+  </div>
 
-            <label for="gender">Gender:</label>
-            <select id="gender" name="gender" required>
-                <option value="">Select Gender</option>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-            </select>
+  <div class="form-group">
+    <label>Age <span style="color:red;">*</span></label>
+    <input type="number" id="age" required />
+  </div>
 
-            <button type="button" id="nextBtn" onclick="nextSection()">Next</button>
-        </form>
-    </div>
+  <div class="form-group">
+    <label>Gender <span style="color:red;">*</span></label>
+    <select id="gender" required>
+      <option value="">-- Select Gender --</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+      <option value="Other">Other</option>
+    </select>
+  </div>
 
-    <!-- Section 2: Salary Details -->
-    <div id="section2" style="display:none;">
-        <h2>Salary Details</h2>
-        <form id="salaryForm">
-            <label for="grossSalary">Gross Salary:</label>
-            <input type="number" id="grossSalary" name="grossSalary" required>
+  <div class="form-group">
+    <label>Do you want assistance for filing IT? <span style="color:red;">*</span></label>
+    <select id="needHelp" onchange="toggleHelpFields()" required>
+      <option value="">-- Select --</option>
+      <option value="Yes">Yes</option>
+      <option value="No">No</option>
+    </select>
+  </div>
 
-            <label for="standardDeduction">Standard Deduction (₹50,000):</label>
-            <input type="number" id="standardDeduction" name="standardDeduction" value="50000" readonly>
+  <div class="form-group hidden" id="panGroup">
+    <label>PAN <span id="panStar" style="color:red; display:none;">*</span></label>
+    <input type="text" id="pan" />
+  </div>
 
-            <label for="professionalTax">Professional Tax:</label>
-            <input type="number" id="professionalTax" name="professionalTax">
+  <div class="form-group hidden" id="mobileGroup">
+    <label>Mobile Number <span id="mobileStar" style="color:red; display:none;">*</span></label>
+    <input type="text" id="mobile" />
+  </div>
 
-            <label for="hraReceived">HRA Received:</label>
-            <input type="number" id="hraReceived" name="hraReceived">
+  <div class="form-group hidden" id="emailGroup">
+    <label>Email ID <span id="emailStar" style="color:red; display:none;">*</span></label>
+    <input type="email" id="email" />
+  </div>
 
-            <label for="rentPaid" id="rentPaidLabel" style="display:none;">Rent Paid:</label>
-            <input type="number" id="rentPaid" name="rentPaid" style="display:none;">
-
-            <label for="residentialStatus">Residential Status:</label>
-            <select id="residentialStatus" name="residentialStatus" required onchange="toggleRentPaid()">
-                <option value="">Select Status</option>
-                <option value="Own">Own</option>
-                <option value="Rented">Rented</option>
-            </select>
-
-            <button type="button" id="nextBtn" onclick="nextSection()">Next</button>
-        </form>
-    </div>
-
-    <!-- Section 3: Result and Feedback -->
-    <div id="section3" style="display:none;">
-        <h2>Tax Calculation Result</h2>
-        <p id="result"></p>
-        <button onclick="redirectToWhatsApp()">Contact us via WhatsApp</button>
-    </div>
-
+  <div class="form-group">
+    <label>Residential Status <span style="color:red;">*</span></label>
+    <select id="residence" onchange="toggleRentField()" required>
+      <option value="">-- Select --</option>
+      <option value="Rented">Rented</option>
+      <option value="Own">Own</option>
+    </select>
+  </div>
 </div>
 
 <script>
-    let currentSection = 1;
+  function toggleHelpFields() {
+    const needHelp = document.getElementById("needHelp").value;
+    const panGroup = document.getElementById("panGroup");
+    const mobileGroup = document.getElementById("mobileGroup");
+    const emailGroup = document.getElementById("emailGroup");
 
-    // Function to move between sections
-    function nextSection() {
-        if (currentSection === 1) {
-            // Hide Section 1 and show Section 2
-            document.getElementById('section1').style.display = 'none';
-            document.getElementById('section2').style.display = 'block';
-            currentSection = 2;
-        }
-        else if (currentSection === 2) {
-            // Hide Section 2 and show Section 3
-            document.getElementById('section2').style.display = 'none';
-            document.getElementById('section3').style.display = 'block';
-            currentSection = 3;
-            
-            // Calculate tax result and display
-            calculateTax();
-        }
+    const panStar = document.getElementById("panStar");
+    const mobileStar = document.getElementById("mobileStar");
+    const emailStar = document.getElementById("emailStar");
+
+    if (needHelp === "Yes") {
+      panGroup.classList.remove("hidden");
+      mobileGroup.classList.remove("hidden");
+      emailGroup.classList.remove("hidden");
+
+      panStar.style.display = "inline";
+      mobileStar.style.display = "inline";
+      emailStar.style.display = "inline";
+    } else {
+      panGroup.classList.remove("hidden");
+      mobileGroup.classList.remove("hidden");
+      emailGroup.classList.remove("hidden");
+
+      panStar.style.display = "none";
+      mobileStar.style.display = "none";
+      emailStar.style.display = "none";
     }
+  }
 
-    // Function to calculate tax (Placeholder for your logic)
-    function calculateTax() {
-        const grossSalary = parseFloat(document.getElementById('grossSalary').value);
-        const professionalTax = parseFloat(document.getElementById('professionalTax').value) || 0;
-        const hraReceived = parseFloat(document.getElementById('hraReceived').value) || 0;
-
-        // Example tax calculation logic (adjust with your actual logic)
-        const totalIncome = grossSalary - professionalTax;
-        const tax = totalIncome * 0.1;  // Assume 10% tax for example
-
-        document.getElementById('result').innerHTML = `Total Tax: ₹${tax.toFixed(2)}`;
-    }
-
-    // Function to handle Residential Status change
-    function toggleRentPaid() {
-        const residentialStatus = document.getElementById('residentialStatus').value;
-        if (residentialStatus === 'Rented') {
-            document.getElementById('rentPaidLabel').style.display = 'block';
-            document.getElementById('rentPaid').style.display = 'block';
-        } else {
-            document.getElementById('rentPaidLabel').style.display = 'none';
-            document.getElementById('rentPaid').style.display = 'none';
-        }
-    }
-
-    // Function to redirect to WhatsApp
-    function redirectToWhatsApp() {
-        const name = document.getElementById('name').value;
-        const result = document.getElementById('result').innerText;
-
-        const message = `Hello, I am ${name}. Here's my tax calculation result: ${result}`;
-        const encodedMessage = encodeURIComponent(message);
-        const whatsappUrl = `https://wa.me/?text=${encodedMessage}`;
-        window.open(whatsappUrl, '_blank');
-    }
+  function toggleRentField() {
+    const residence = document.getElementById("residence").value;
+    localStorage.setItem("rentStatus", residence); // We'll use this in Section 2
+  }
 </script>
 
 </body>
